<resources>
    <string name="app_name">Pinstargram</string>

    <!--    Validation-->

    <string name="validate_message_length">4글자 이상이여야합니다</string>
    <string name="validate_message_empty">필수 입력 항목입니다</string>
    <string name="validate_message_email">이메일 형식이어야 합니다</string>
    <!--  Splash Activity  -->


    <!--  Main Activity  -->
    <string name="main_tap_map_title">지도</string>
    <string name="main_tap_event_title">이벤트</string>
    <string name="main_tap_home_title">홈</string>
    <string name="main_tap_talk_title">톡톡</string>
    <string name="main_tap_user_title">내정보</string>

    <string name="main_location_warning">위치 정보를 수신할 수 없습니다. Wifi의 경우, 간헐적으로 위치 정보를 받아오지 못할 수 있습니다. 가용한 지역으로 설정됩니다.</string>
    <string name="main_network_warning">네트워크 요청을 실행할 수 없습니다. 네트워크를 확인 후에 다시 시도 해주십시오.</string>

    <string name="auth_button_login_text">로그인</string>
    <string name="auth_button_logout_text">로그아웃</string>

    <string name="main_top_tab_all">전체</string>

    <string name="main_logout_dialog_title">로그아웃 하기</string>
    <string name="main_logout_dialog_content">로그아웃 하시겠습니까?</string>
    <string name="main_logout_dialog_positive">로그아웃</string>
    <string name="main_logout_dialog_negative">취소</string>
    <string name="main_logout_warning">로그아웃에 실패하였습니다</string>
    <string name="main_address_text">주소 정보를 받아오는 중입니다</string>
    <string name="main_fail_address">주소를 못 받아왔습니다</string>
    <string name="main_needs_auth">계정이 필요합니다. 우측상단의 로그인 버튼을 눌러주세요</string>
    <!--    Detail Activity -->
    <string name="detail_contents_not_found_warning">해당 데이터에 문제가 발생하였습니다.</string>

    <string name="detail_item_title">제목</string>
    <string name="detail_item_description">설명</string>
    <string name="detail_item_tag">분류</string>
    <string name="detail_item_full_address">주소</string>
    <string name="detail_item_map">위치</string>

    <!--    Write Dialog-->
    <string name="write_hint_title">제목</string>
    <string name="write_hint_description">설명</string>
    <string name="write_toast_create_fail">요청에 실패하였습니다.</string>
    <string name="write_toast_create_success">요청에 성공하였습니다.</string>

    <!--    AddressDialog-->
    <string name="address_dialog_request_fail">주소 정보를 받아오는데 실패했습니다</string>
    <string name="address_dialog_request_start">카카오 로컬 API가 간헐적으로 특정 주소를 변환하지 못하고 있습니다. \n오래걸린다면 유사한 주소를 선택해보세요</string>

    <!--    HomeFragment-->
    <string name="home_fragment_empty"><![CDATA[현재 위치에 조회된 데이터가 없습니다! \n더미데이터가 <font color=\'#ff0000\'>서현역</font>에 있습니다.\n 여기를 클릭해서 서현역으로 설정해보세요]]></string>
    <!--Talk Fragment-->
    <string name="talk_api_warning">데이터를 불러오는 실패했습니다. 다시 시도해주세요</string>
    <string name="talk_socket_warning">소켓에 연결하는데 실패했습니다. 다시 시도해주세요</string>

    <!--    Event Fragment-->
    <string name="event_fragment_init_state">지역의 이벤트를 조회하고있어요! 잠시만요!</string>
    <string name="event_fragment_fail_state">지역의 이벤트를 받아오는데 실패했어요.. 네트워크를 확인해주세요!</string>
    <string name="event_fragment_empty_state">이 지역에는 시행중인 이벤트가 없네요..</string>

    <!--    Sign Dialog-->
    <string name="sign_in_info_to_sign_up"><![CDATA[간단하게 아이디,비밀번호,닉네임으로 <font color=\'#ff0000\'>회원가입</font>해보세요]]></string>
    <string name="sign_in_user_not_founded">아이디, 패스워드와 일치하는 계정정보를 찾을 수 없습니다.</string>
    <string name="sign_in_database_fail">데이터베이스 생성에 실패하였습니다 다시 시도해주세요</string>
    <string name="sign_email_text">이메일</string>
    <string name="sign_password_text">패스워드</string>
    <string name="sign_name_text">닉네임</string>
    <string name="sign_in_send">로그인하기</string>
    <string name="sign_in_request_success">로그인에 성공하였습니다</string>
    <string name="sign_up_send">회원가입</string>
    <string name="sign_up_request_fail">요청에 실패하였습니다</string>
    <string name="sign_up_duplicated_email">이미 가입된 이메일입니다</string>
    <string name="sign_up_request_success">회원가입에 성공하였습니다. 자동으로 로그인 됩니다</string>

</resources>